tdf#119775 Make keyboard use work for TableWindow popup window

This patch restores the ability to use the keyboard for the TableWindow
popup window by not including the 'More Options...' button when
activated by keyboard from a toolbox. It also limits handling of key
input to SPACE, RETURN, and ESCAPE key input when mouse activated.

Change-Id: I306bcb844a829ca7067b8496f37cb68f35fa754d
Reviewed-on: https://gerrit.libreoffice.org/71813
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>